--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -68,15 +68,18 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 0.7rem;
     padding: 0 0.25rem;
+    max-width: 500px;
+    margin: 0 auto;
   }
 
   .teamMember {
-    min-width: 200px;
+    min-width: unset;
     padding: 1rem;
   }
 
   .teamDescription {
     font-size: 1.1rem;
+    padding: 0 1rem;
   }
 }
 
@@ -84,10 +87,11 @@
   .teamGrid {
     grid-template-columns: repeat(3, 1fr);
     gap: 0.5rem;
+    padding: 0 0.25rem;
   }
 
   .teamMember {
-    min-width: 150px;
+    min-width: unset;
     padding: 0.7rem;
   }
 
@@ -102,5 +106,6 @@
 
   .teamDescription {
     font-size: 1rem;
+    padding: 0 0.5rem;
   }
 } 
